<resources>
    <string name="app_name">YouJoin</string>

    <!-- 切换Fragment时的标题-->
    <string name="title_tweets">动态</string>
    <!--<string name="title_mine">我的</string>-->
    <string name="title_friends">朋友</string>
    <string name="title_message">消息</string>
    <string name="title_plugin">插件</string>
    <string name="title_about">关于</string>
    <string name="title_around">附近</string>

    <!-- Activity的标题-->
    <string name="title_activity_main">YouJoin</string>
    <string name="title_activity_search_friend">搜索用户</string>
    <string name="title_activity_publish">发表动态</string>

    <!-- Navigation View Items-->
    <!--<string name="navigation_mine">Mine</string>-->
    <string name="navigation_friends">朋友</string>
    <string name="navigation_msg">消息</string>
    <string name="navigation_tweets">动态</string>
    <string name="navigation_setting">设置</string>
    <string name="navigation_about">关于</string>
    <string name="navigation_exit">退出</string>
    <string name="navigation_plugin">插件</string>
    <string name="navigation_around">附近</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="hint_nodata">还没有数据哦~</string>

    <!-- Strings related to personal center-->
    <string name="hint_work">职业</string>
    <string name="hint_location">现居</string>
    <string name="hint_birth">生日</string>
    <string name="hint_sex">性别</string>
    <string name="hint_sign">个性签名</string>
    <string name="hint_avatar">头像</string>
    <string name="hint_nickname">昵称</string>

    <!-- Strings related to publish-->
    <string name="hint_publish">分享新鲜事</string>

    <!-- Strings related to search user-->
    <string name="hint_search_content">输入用户名、邮箱或用户ID进行搜索</string>

    <!-- Strings related to login -->
    <string name="hint_email">邮箱</string>
    <string name="hint_password">密码</string>
    <string name="hint_confirm_password">确认密码</string>
    <string name="hint_username">用户名</string>

    <string name="action_sign_in">登录</string>
    <string name="action_sign_up">注册</string>

    <string name="error_invalid_username">用户名不合法</string>
    <string name="error_invalid_email">邮箱不合法</string>
    <string name="error_invalid_password">密码长度过短</string>
    <string name="error_invalid_confirm_password">两次密码输入不匹配</string>
    <string name="error_field_required">此项为必填项</string>
    <string name="title_activity_user_info">资料卡</string>

    <string name="title_activity_message">私信</string>

    <string name="error_network">啊呀，失败啦！</string>
    <string name="send_tweet_success">动态发送成功</string>
    <string name="update_success">更新用户信息成功</string>

    <string name="sex_man">男</string>
    <string name="sex_woman">女</string>

    <string name="choose_province">选择省份</string>
    <string name="choose_city">选择城市</string>
    <string name="choose_county">选择区县</string>
    <string name="title_activity_choose_location">选择地区</string>
    <string name="title_activity_tweet_detail">动态详情</string>
    <string name="click_again_to_exit">再按一次返回键退出YouJoin</string>

    <string name="download_finished">下载完成</string>
    <string name="download_failure">下载失败</string>
    <string name="download_sdcarderr">SD卡不存在</string>

    <string name="text_focus">关注了</string>
    <string name="text_follow">粉丝</string>

    <string name="copyright">The MIT License (MIT)\n\nCopyright (c) 2016 YouJoin Studio\n\nPermission is hereby granted, free of charge,to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
