<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activity.SignInUpActivity"
    android:background="@color/white">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/login_bg"/>

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/general_margin"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="55dp">

            <LinearLayout
                android:id="@+id/username_signin_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--<android.support.design.widget.TextInputLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content">-->

                <EditText
                    android:id="@+id/username_edit"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/hint_username"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:background="@color/login_text_bg"
                    android:layout_marginBottom="10dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/login_text_color"
                    android:textSize="@dimen/signin_text_size"
                    android:textColorHint="@color/login_text_color"/>

                <!--</android.support.design.widget.TextInputLayout>-->

                <!--<android.support.design.widget.TextInputLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content">-->

                <EditText
                    android:id="@+id/password_edit"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/hint_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:background="@color/login_text_bg"
                    android:layout_marginBottom="10dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/login_text_color"
                    android:textSize="@dimen/signin_text_size"
                    android:textColorHint="@color/login_text_color"/>

                <!--</android.support.design.widget.TextInputLayout>-->


            </LinearLayout>

            <LinearLayout
                android:id="@+id/username_signup_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--<android.support.design.widget.TextInputLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content">-->


                <EditText
                    android:id="@+id/password_confirm_edit"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/hint_confirm_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:background="@color/login_text_bg"
                    android:layout_marginBottom="10dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/login_text_color"
                    android:textSize="@dimen/signin_text_size"
                    android:textColorHint="@color/login_text_color"/>

                <!--</android.support.design.widget.TextInputLayout>-->

                <!--<android.support.design.widget.TextInputLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content">-->

                <EditText
                    android:id="@+id/email_edit"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:background="@color/login_text_bg"
                    android:layout_marginBottom="10dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/login_text_color"
                    android:textSize="@dimen/signin_text_size"
                    android:textColorHint="@color/login_text_color"/>

                <!--</android.support.design.widget.TextInputLayout>-->

            </LinearLayout>



            <Button
                android:id="@+id/sign_commit_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:background="@color/login_orange"
                android:textColor="@color/white"/>

        </LinearLayout>

    </ScrollView>
</LinearLayout>
