<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.zq.youjoin.activity.UserInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:id="@+id/userinfo_header"
        android:orientation="vertical"
        android:background="@drawable/user_info_header">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="16.5dp"
            android:background="@drawable/ic_account_circle_white_48dp"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nickname"
                android:text="nickname"
                android:textColor="@color/white"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="4dp"/>

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:id="@+id/sex"
                android:layout_gravity="center_vertical"
                android:background="@drawable/ic_sex_boy"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="64dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_follow"
                android:textColor="@color/trans_white"
                android:textSize="@dimen/user_detail_text_size"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/follow_num"
                tools:text="123"
                android:textColor="@color/trans_white"
                android:textSize="@dimen/user_detail_text_size"
                android:layout_marginEnd="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_focus"
                android:textColor="@color/trans_white"
                android:textSize="@dimen/user_detail_text_size"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/focus_num"
                tools:text="123"
                android:textColor="@color/trans_white"
                android:textSize="@dimen/user_detail_text_size"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_follow"
                android:button="@drawable/checkbox_follow"/>

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/container_detail"
        android:layout_below="@id/userinfo_header"
        android:layout_marginStart="36dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/user_detail_margin">

            <TextView
                android:layout_width="@dimen/user_detail_text_width"
                android:layout_height="wrap_content"
                android:text="@string/hint_birth"
                android:textSize="@dimen/user_detail_text_size"
                android:layout_marginStart="@dimen/user_detail_item_margin"
                android:layout_marginEnd="@dimen/user_detail_item_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/birth"
                tools:text="birth"
                android:textSize="@dimen/user_detail_text_size"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/user_detail_margin">

            <TextView
                android:layout_width="@dimen/user_detail_text_width"
                android:layout_height="wrap_content"
                android:text="@string/hint_location"
                android:textSize="@dimen/user_detail_text_size"
                android:layout_marginStart="@dimen/user_detail_item_margin"
                android:layout_marginEnd="@dimen/user_detail_item_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/location"
                tools:text="location"
                android:textSize="@dimen/user_detail_text_size"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/user_detail_margin">

            <TextView
                android:layout_width="@dimen/user_detail_text_width"
                android:layout_height="wrap_content"
                android:text="@string/hint_work"
                android:textSize="@dimen/user_detail_text_size"
                android:layout_marginStart="@dimen/user_detail_item_margin"
                android:layout_marginEnd="@dimen/user_detail_item_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/work"
                tools:text="student"
                android:textSize="@dimen/user_detail_text_size"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/user_detail_margin">

            <TextView
                android:layout_width="@dimen/user_detail_text_width"
                android:layout_height="wrap_content"
                android:text="@string/hint_email"
                android:textSize="@dimen/user_detail_text_size"
                android:layout_marginStart="@dimen/user_detail_item_margin"
                android:layout_marginEnd="@dimen/user_detail_item_margin"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                tools:text="zzq@zzq.com"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/user_detail_text_size"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/user_detail_margin">

            <TextView
                android:layout_width="@dimen/user_detail_text_width"
                android:layout_height="wrap_content"
                android:text="@string/hint_sign"
                android:textSize="@dimen/user_detail_text_size"
                android:layout_marginStart="@dimen/user_detail_item_margin"
                android:layout_marginEnd="@dimen/user_detail_item_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sign"
                tools:text="sign"
                android:textSize="@dimen/user_detail_text_size"/>

        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/curr_user_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_popup_attachment_rename"
        app:backgroundTint="@color/yellow"
        android:visibility="gone"
        android:layout_gravity="bottom|end"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/fab_margin"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/other_user_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_send_white_48dp"
        app:backgroundTint="@color/yellow"
        android:visibility="gone"
        android:layout_gravity="bottom|end"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/fab_margin"/>


    <!--android:src="@android:drawable/ic_dialog_email"-->
</RelativeLayout>
